# galaxie-de-mots

./: .gitignore  CMakeLists.txt  README.md  build.gradle  galaxie.cmake
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/eu/d8s/galaxie/: Constants.java  DatabaseHelper.java  GalaxieActivity.java  SerialListener.java  SerialService.java  SerialSocket.java
app/src/main/res/values/: strings.xml
assets/db/: generate_sqlite_db.py  lexique_5_letters.inc
assets/letters/: generate.py
libs/lib_imgui/: CMakeLists.txt  imgui.cmake
libs/lib_sdl2/: CMakeLists.txt
resources/db/: generate-db.py  generate_5_letters.py
resources/letters/: generate.py
resources/logo/: generate-for-android.sh
src/: CMakeLists.txt  application.cpp  application.h  button.h  common.cpp  common.h  database.cpp  database.h  gfx-engine.cpp  gfx-engine.h  home-scene.cpp  home-scene.h  i_application.h  keyboard.cpp  keyboard.h  letter-tile.cpp  letter-tile.h  letter.cpp  letter.h  main.c  main.cpp  motus-gui.cpp  motus-gui.h  motus.cpp  motus.h  observer.h  scenes.h  thread_queue.h
src/activities/motus/: motus-grid.cpp  motus-grid.h  motus-gui.cpp  motus-gui.h  motus-keyboard.cpp  motus-keyboard.h  motus.cpp  motus.h
src/activities/topping/: topping-scene.cpp  topping-scene.h
src/gfx-engine/: entity.cpp  entity.h  gfx-engine.cpp  gfx-engine.h  image.cpp  image.h  xlog.h
